# repotest

./: README.md  pyproject.toml
src/mypackage/: example.py
